tests/typecheck/should_fail/T2354.stderr

T2354.hs:4:3: error: [GHC-28587]
    The NOINLINE pragma for default method ‘toInt’ lacks an accompanying binding

T2354.hs:6:3: error: [GHC-28587]
    The NOINLINE pragma for default method ‘fromInt’ lacks an accompanying binding
